--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     </div>
   </div>
 
+  <button class="btn btn-info btn-opacity-75" type="button"><a href="page1.html">test</a></button>
+
   <p><a href="page1.html" class="link-warning">Warning link</a></p>
 
 
